[workspace]
members = [ "rmw-sys", "rmw-zenoh-rs"]
resolver = "2"

[workspace.dependencies]
r2r_common = "0.9.0"
r2r = "0.9.0"
rmw-sys = { version = "0.1.0", path = "./rmw-sys"}
tracing = "0.1.40"
tracing-subscriber = "0.3"
zenoh = { version = "0.11.0-rc.3", default-feature = false, features = ["transport_tcp", "transport_udp"] }
bincode = "1.3.3"
flume = "0.11.0"


[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
